--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-NODE_MAILER_EMAIL= faizanshaikh008007@gmail.com
-NODE_MAILER_GMAIL_APP_PASSWORD= ljhr ocmr amzb ibzz
+NODE_MAILER_EMAIL= "faizanshaikh008007@gmail.com"
+NODE_MAILER_GMAIL_APP_PASSWORD= "ljhr ocmr amzb ibzz"
 
 NEXT_PUBLIC_PUSHER_APP_CLUSTOR= ap2
 NEXT_PUBLIC_PUSHER_APP_SECRET= b0d54e95eb2b1bbefe1d
@@ -31,13 +31,22 @@ NEXT_PUBLIC_STRIPE_PUBLISH_KEY=pk_test_51PVaFcDO7UmjWwxmBF1RMBmAAku4UApFn5pKF3Nj
 
 DATABASE_URL="postgresql://Chqt-ai_owner:TMN1vm6WAdeg@ep-divine-recipe-a19qwe83.ap-southeast-1.aws.neon.tech/Chqt-ai?sslmode=require"
 
-CLOUDWAYS_POSTS_URL= "https://wordpress-1269066-4577871.cloudwaysapps.com/wp-json/wp/v2/testposts"
+# CLOUDWAYS_POSTS_URL= "https://wordpress-1269066-4577871.cloudwaysapps.com/wp-json/wp/v2/testposts"
 
 
-CLOUDWAYS_FEATURED_IMAGES_URL="https://wordpress-1269066-4577871.cloudwaysapps.com/wp-json/wp/v2/media"
+# CLOUDWAYS_FEATURED_IMAGES_URL="https://wordpress-1269066-4577871.cloudwaysapps.com/wp-json/wp/v2/media"
 
 
-CLOUDWAYS_UPLOADS_URL="https://wordpress-1269066-4577871.cloudwaysapps.com/wp-content/uploads/"
+# CLOUDWAYS_UPLOADS_URL="https://wordpress-1269066-4577871.cloudwaysapps.com/wp-content/uploads/"
 
 
-CLOUDWAYS_USERS_URL="https://wordpress-1269066-4577871.cloudwaysapps.com/wp-json/wp/v2/users"
+# CLOUDWAYS_USERS_URL="https://wordpress-1269066-4577871.cloudwaysapps.com/wp-json/wp/v2/users"
+CLOUDWAYS_POSTS_URL= "https://wordpress-1347159-4947262.cloudwaysapps.com/wp-json/wp/v2/testposts"
+CLOUDWAYS_FEATURED_IMAGES_URL = "https://wordpress-1347159-4947262.cloudwaysapps.com/wp-json/wp/v2/media"
+CLOUDWAYS_UPLOADS_URL = "https://wordpress-1347159-4947262.cloudwaysapps.com/wp-content/uploads/"
+CLOUDWAYS_USERS_URL = "https://wordpress-1347159-4947262.cloudwaysapps.com/wp-json/wp/v2/users/"
+
+
+
+
+# http://localhost:3000/portal/955fa30c-a068-4b30-a743-4045d1731670/appointment/5778a9f7-aab9-496d-8a1c-5d379a37e31c
