--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "@stripe/stripe-js": "^3.4.1",
     "@types/nodemailer": "^6.4.15",
     "@uploadcare/blocks": "^0.40.0",
+    "aceternity-ui": "^0.2.2",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
+    "framer-motion": "^11.11.8",
     "html-react-parser": "^5.1.10",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.378.0",
@@ -73,13 +75,13 @@
     "zod": "^3.23.6"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
